--- a/src/assets/css/sass/plugins/sidebar.scss
+++ b/src/assets/css/sass/plugins/sidebar.scss
@@ -60,7 +60,7 @@
         color: $primary-color;
         transition: color $menu-collapse-time;
         transition: background $menu-collapse-time;
-
+        text-align: center;
         &:hover,
         &:focus {
           color: $theme-color-1;
